@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide circle

class ":Storage" {
    + Storage()
    + load() : void
    + save() : void
}

class ":TaskList" {
    + addToDo() : void
    + addDeadline() : void
    + addEvent() : void
    + getTask() : Task
    + getTasks() : ArrayList
    + getCount() : int
}

class ":ReminderList" {
    + addReminderRec() : void
    + addReminderOneTime() : void
    + getReminders() : ArrayList
    + getCount() : int
}

class ":HabitList" {
    + addHabit() : void
    + addHabit() : void
    + getHabits() : ArrayList
    + getCount() : int
}

' arrows: these lists "use" Storage for persistence
":TaskList" --> ":Storage"
":ReminderList" --> ":Storage"
":HabitList" --> ":Storage"

@enduml
